# data_norm_mini_class

./: README.md  pyproject.toml
data/: .gitignore
data_norm_class/: constants.py  io.py  normalization.py
notebooks/: data_norm_class.ipynb
scripts/: sample_aarc_data.py
