[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_norm_class"
dynamic = ["version"]
description = "A mini class on data normalization"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    # Add your project dependencies here
    "pandas", "jupyter"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "data_norm_class.__version__"}
